Created new component where , i have created multiple input fields , here try to handle the form , also apply here validation

--- a/src/UseRef/Style.css
+++ b/src/UseRef/Style.css
@@ -1,5 +1,5 @@
 *{
-    background-color: palegreen;
+    /* background-color: palegreen; */
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
